mudando o texto para português

--- a/index.html
+++ b/index.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Expert - Intelligent Solutions for Your Business</title>
+    <title>AI Expert - Soluções Inteligentes para o Seu Negócio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <!-- Navigation -->
+    <!-- Navegação -->
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
                 <h2>AI Expert</h2>
             </div>
             <div class="nav-links">
-                <a href="#services">Services</a>
-                <a href="#advantages">Benefits</a>
-                <a href="#pricing">Pricing</a>
-                <a href="https://wa.me/5517991387471?text=I%20want%20to%20know%20more%20about%20your%20AI%20services" class="nav-cta" target="_blank">Get Started</a>
+                <a href="#services">Serviços</a>
+                <a href="#advantages">Vantagens</a>
+                <a href="#pricing">Planos</a>
+                <a href="https://wa.me/5517991387471?text=Quero%20saber%20mais%20sobre%20seus%20serviços%20de%20IA" class="nav-cta" target="_blank">Começar Agora</a>
             </div>
         </div>
     </nav>
 
-    <!-- Hero Section -->
+    <!-- Seção Hero -->
     <section id="hero">
         <div class="container">
             <div class="hero-content">
-                <h1>Built for the Future of AI Solutions</h1>
-                <p>Transform your business with intelligent AI conversations and data-driven insights that deliver real results.</p>
-                <a href="https://wa.me/5517991387471?text=I%20am%20interested%20in%20your%20AI%20services%20and%20would%20like%20to%20start%20a%20conversation" class="cta-btn primary" target="_blank">
-                    Start a Conversation on WhatsApp
+                <h1>Construído para o Futuro das Soluções de IA</h1>
+                <p>Transforme o seu negócio com conversas inteligentes de IA e insights baseados em dados que trazem resultados reais.</p>
+                <a href="https://wa.me/5517991387471?text=Estou%20interessado%20nos%20seus%20serviços%20de%20IA%20e%20gostaria%20de%20conversar" class="cta-btn primary" target="_blank">
+                    Iniciar Conversa no WhatsApp
                 </a>
             </div>
         </div>
@@ -45,189 +45,189 @@
         </div>
     </section>
 
-    <!-- Service Overview Section -->
+    <!-- Seção de Serviços -->
     <section id="services">
         <div class="container">
             <div class="section-header">
-                <h2>What We Offer</h2>
-                <p>Our AI service delivers intelligent automation, real-time insights, and seamless integration to help your business thrive in the digital age.</p>
+                <h2>O Que Oferecemos</h2>
+                <p>Nossos serviços de IA entregam automação inteligente, insights em tempo real e integração perfeita para ajudar seu negócio a prosperar na era digital.</p>
             </div>
             <div class="services-grid">
                 <div class="service-card">
                     <div class="service-icon">
                         <div class="icon-shape shape-1"></div>
                     </div>
-                    <h3>Intelligent Automation</h3>
-                    <p>Streamline your workflows with AI-powered automation that learns and adapts to your business needs.</p>
+                    <h3>Automação Inteligente</h3>
+                    <p>Otimize seus fluxos de trabalho com automação baseada em IA que aprende e se adapta às necessidades do seu negócio.</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
                         <div class="icon-shape shape-2"></div>
                     </div>
-                    <h3>Real-time Analytics</h3>
-                    <p>Get instant insights from your data with advanced AI analytics that reveal hidden patterns and opportunities.</p>
+                    <h3>Análises em Tempo Real</h3>
+                    <p>Obtenha insights instantâneos com análises avançadas de IA que revelam padrões e oportunidades ocultas.</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
                         <div class="icon-shape shape-3"></div>
                     </div>
-                    <h3>Seamless Integration</h3>
-                    <p>Connect our AI solutions with your existing systems for a unified, intelligent business ecosystem.</p>
+                    <h3>Integração Perfeita</h3>
+                    <p>Conecte nossas soluções de IA aos seus sistemas existentes para criar um ecossistema empresarial inteligente.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Advantages Section -->
+    <!-- Seção de Vantagens -->
     <section id="advantages">
         <div class="container">
             <div class="section-header">
-                <h2>Why Choose Our AI Solutions</h2>
-                <p>Experience the advantages that set our AI services apart from the competition.</p>
+                <h2>Por Que Escolher Nossas Soluções de IA</h2>
+                <p>Conheça as vantagens que diferenciam nossos serviços de IA da concorrência.</p>
             </div>
             <div class="advantages-grid">
                 <div class="advantage-card">
                     <div class="advantage-number">01</div>
-                    <h3>Efficiency</h3>
-                    <p>Reduce operational costs by up to 40% with intelligent process automation and optimized workflows.</p>
+                    <h3>Eficiência</h3>
+                    <p>Reduza custos operacionais em até 40% com automação de processos e fluxos de trabalho otimizados.</p>
                 </div>
                 <div class="advantage-card">
                     <div class="advantage-number">02</div>
-                    <h3>Innovation</h3>
-                    <p>Stay ahead with cutting-edge AI technology that evolves with your business and market demands.</p>
+                    <h3>Inovação</h3>
+                    <p>Mantenha-se à frente com tecnologia de IA de ponta que evolui com seu negócio e as demandas do mercado.</p>
                 </div>
                 <div class="advantage-card">
                     <div class="advantage-number">03</div>
-                    <h3>Scalability</h3>
-                    <p>Grow without limits with AI solutions that scale seamlessly from startup to enterprise level.</p>
+                    <h3>Escalabilidade</h3>
+                    <p>Cresça sem limites com soluções de IA que se adaptam de startups a grandes empresas.</p>
                 </div>
                 <div class="advantage-card">
                     <div class="advantage-number">04</div>
-                    <h3>User-Centric</h3>
-                    <p>Designed for intuitive user experience with minimal learning curve and maximum productivity.</p>
+                    <h3>Foco no Usuário</h3>
+                    <p>Desenhado para uma experiência intuitiva com curva de aprendizado mínima e máxima produtividade.</p>
                 </div>
                 <div class="advantage-card">
                     <div class="advantage-number">05</div>
-                    <h3>24/7 Support</h3>
-                    <p>Round-the-clock AI assistance and human support to ensure your business never stops running.</p>
+                    <h3>Suporte 24/7</h3>
+                    <p>Atendimento com IA e suporte humano 24 horas por dia para garantir que seu negócio nunca pare.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Pricing Section -->
+    <!-- Seção de Planos -->
     <section id="pricing">
         <div class="container">
             <div class="section-header">
-                <h2>Choose Your AI Plan</h2>
-                <p>Select the perfect plan for your business needs. All plans include WhatsApp consultation and setup assistance.</p>
+                <h2>Escolha Seu Plano de IA</h2>
+                <p>Selecione o plano ideal para as necessidades do seu negócio. Todos incluem consulta via WhatsApp e assistência na configuração.</p>
             </div>
             <div class="pricing-grid">
                 <div class="plan-card">
                     <div class="plan-header">
-                        <h3>Starter</h3>
+                        <h3>Básico</h3>
                         <div class="plan-price">
-                            <span class="currency">$</span>
+                            <span class="currency">R$</span>
                             <span class="amount">99</span>
-                            <span class="period">/month</span>
+                            <span class="period">/mês</span>
                         </div>
                     </div>
                     <ul class="plan-features">
-                        <li>Basic AI Consultation</li>
-                        <li>Email Support</li>
-                        <li>1 Integration</li>
-                        <li>Monthly Reports</li>
+                        <li>Consulta básica de IA</li>
+                        <li>Suporte por e-mail</li>
+                        <li>1 Integração</li>
+                        <li>Relatórios Mensais</li>
                     </ul>
-                    <a href="https://wa.me/5511999999999?text=I%20am%20interested%20in%20the%20Starter%20Plan%20($99/month)%20and%20would%20like%20to%20discuss%20the%20details" class="cta-btn secondary" target="_blank">
-                        Choose Plan & Chat on WhatsApp
+                    <a href="https://wa.me/5511999999999?text=Tenho%20interesse%20no%20Plano%20Básico%20(R$99/mês)%20e%20gostaria%20de%20mais%20detalhes" class="cta-btn secondary" target="_blank">
+                        Escolher Plano & Falar no WhatsApp
                     </a>
                 </div>
                 <div class="plan-card featured">
-                    <div class="plan-badge">Most Popular</div>
+                    <div class="plan-badge">Mais Popular</div>
                     <div class="plan-header">
-                        <h3>Professional</h3>
+                        <h3>Profissional</h3>
                         <div class="plan-price">
-                            <span class="currency">$</span>
+                            <span class="currency">R$</span>
                             <span class="amount">299</span>
-                            <span class="period">/month</span>
+                            <span class="period">/mês</span>
                         </div>
                     </div>
                     <ul class="plan-features">
-                        <li>Advanced AI Tools</li>
-                        <li>Priority Support</li>
-                        <li>5 Integrations</li>
-                        <li>Real-time Analytics</li>
-                        <li>Custom Workflows</li>
+                        <li>Ferramentas avançadas de IA</li>
+                        <li>Suporte prioritário</li>
+                        <li>5 Integrações</li>
+                        <li>Análises em tempo real</li>
+                        <li>Fluxos de trabalho personalizados</li>
                     </ul>
-                    <a href="https://wa.me/5511999999999?text=I%20am%20interested%20in%20the%20Professional%20Plan%20($299/month)%20and%20would%20like%20to%20discuss%20the%20details" class="cta-btn primary" target="_blank">
-                        Choose Plan & Chat on WhatsApp
+                    <a href="https://wa.me/5511999999999?text=Tenho%20interesse%20no%20Plano%20Profissional%20(R$299/mês)%20e%20gostaria%20de%20mais%20detalhes" class="cta-btn primary" target="_blank">
+                        Escolher Plano & Falar no WhatsApp
                     </a>
                 </div>
                 <div class="plan-card">
                     <div class="plan-header">
-                        <h3>Enterprise</h3>
+                        <h3>Empresarial</h3>
                         <div class="plan-price">
-                            <span class="custom">Custom</span>
+                            <span class="custom">Sob Consulta</span>
                         </div>
                     </div>
                     <ul class="plan-features">
-                        <li>Custom AI Solutions</li>
-                        <li>Dedicated Support Team</li>
-                        <li>Unlimited Integrations</li>
-                        <li>Advanced Security</li>
-                        <li>On-premise Deployment</li>
+                        <li>Soluções de IA personalizadas</li>
+                        <li>Equipe de suporte dedicada</li>
+                        <li>Integrações ilimitadas</li>
+                        <li>Segurança avançada</li>
+                        <li>Implementação local (on-premise)</li>
                     </ul>
-                    <a href="https://wa.me/5511999999999?text=I%20am%20interested%20in%20the%20Enterprise%20Plan%20and%20would%20like%20to%20discuss%20custom%20pricing%20and%20solutions" class="cta-btn secondary" target="_blank">
-                        Get Custom Quote via WhatsApp
+                    <a href="https://wa.me/5511999999999?text=Tenho%20interesse%20no%20Plano%20Empresarial%20e%20gostaria%20de%20conversar%20sobre%20preços%20e%20soluções%20personalizadas" class="cta-btn secondary" target="_blank">
+                        Solicitar Orçamento Personalizado
                     </a>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- CTA Section -->
+    <!-- Seção CTA -->
     <section id="cta-section">
         <div class="container">
             <div class="cta-content">
-                <h2>Ready to Transform Your Business?</h2>
-                <p>Join thousands of companies already using our AI solutions to drive growth and innovation.</p>
-                <a href="https://wa.me/5511999999999?text=I%20am%20ready%20to%20transform%20my%20business%20with%20AI%20solutions.%20Let's%20discuss%20how%20to%20get%20started" class="cta-btn primary large" target="_blank">
-                    Talk to Our AI Expert Now
+                <h2>Pronto para Transformar Seu Negócio?</h2>
+                <p>Junte-se a milhares de empresas que já utilizam nossas soluções de IA para impulsionar crescimento e inovação.</p>
+                <a href="https://wa.me/5511999999999?text=Estou%20pronto%20para%20transformar%20meu%20negócio%20com%20soluções%20de%20IA.%20Vamos%20conversar%20sobre%20como%20começar" class="cta-btn primary large" target="_blank">
+                    Fale com um Especialista Agora
                 </a>
             </div>
         </div>
     </section>
 
-    <!-- Footer -->
+    <!-- Rodapé -->
     <footer>
         <div class="container">
             <div class="footer-content">
                 <div class="footer-brand">
                     <h3>AI Expert</h3>
-                    <p>Intelligent solutions for the future of business.</p>
+                    <p>Soluções inteligentes para o futuro dos negócios.</p>
                 </div>
                 <div class="footer-links">
                     <div class="footer-column">
-                        <h4>Services</h4>
-                        <a href="#services">AI Automation</a>
-                        <a href="#services">Analytics</a>
-                        <a href="#services">Integration</a>
+                        <h4>Serviços</h4>
+                        <a href="#services">Automação de IA</a>
+                        <a href="#services">Análises</a>
+                        <a href="#services">Integração</a>
                     </div>
                     <div class="footer-column">
-                        <h4>Company</h4>
-                        <a href="#advantages">About Us</a>
-                        <a href="#pricing">Pricing</a>
-                        <a href="https://wa.me/5511999999999?text=I%20need%20support%20with%20my%20AI%20service" target="_blank">Support</a>
+                        <h4>Empresa</h4>
+                        <a href="#advantages">Sobre Nós</a>
+                        <a href="#pricing">Planos</a>
+                        <a href="https://wa.me/5511999999999?text=Preciso%20de%20suporte%20com%20meu%20serviço%20de%20IA" target="_blank">Suporte</a>
                     </div>
                     <div class="footer-column">
-                        <h4>Contact</h4>
+                        <h4>Contato</h4>
                         <a href="mailto:contact@aiexpert.com">contact@aiexpert.com</a>
                         <a href="https://wa.me/5511999999999" target="_blank">WhatsApp</a>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 AI Expert. All rights reserved.</p>
+                <p>&copy; 2024 AI Expert. Todos os direitos reservados.</p>
             </div>
         </div>
     </footer>
