algumas mudanças de cores e nova secao

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             </div>
         </div>
     </section>
+    
 
     <!-- Seção de Serviços -->
     <section id="services">
@@ -77,6 +78,25 @@
             </div>
         </div>
     </section>
+    <section id="demo">
+    <div class="container">
+        <div class="section-header">
+            <h2>Veja o Software em Ação</h2>
+            <p>Assista a uma demonstração rápida e descubra como nossas soluções de IA podem transformar o seu negócio.</p>
+        </div>
+        <div class="demo-video-container">
+            <div class="video-wrapper">
+                <iframe 
+                    src="https://www.youtube.com/embed/VIDEO_ID_AQUI" 
+                    title="Demonstração do Software"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
+            </div>
+        </div>
+    </div>
+</section>
 
     <!-- Seção de Vantagens -->
     <section id="advantages">
