--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1>Construído para o Futuro das Soluções de IA</h1>
-                <p>Transforme o seu negócio com conversas inteligentes de IA e insights baseados em dados que trazem resultados reais.</p>
+                <p>Transforme o seu negócio com conversas inteligentes e humanizadas, convertendo mais vendas de uma maneira mais econômica.</p>
                 <a href="https://wa.me/5517991387471?text=Estou%20interessado%20nos%20seus%20serviços%20de%20IA%20e%20gostaria%20de%20conversar" class="cta-btn primary" target="_blank">
                     Iniciar Conversa no WhatsApp
                 </a>
@@ -65,8 +65,8 @@
                     <div class="service-icon">
                         <div class="icon-shape shape-2"></div>
                     </div>
-                    <h3>Análises em Tempo Real</h3>
-                    <p>Obtenha insights instantâneos com análises avançadas de IA que revelam padrões e oportunidades ocultas.</p>
+                    <h3>Trabalho 24/7</h3>
+                    <p>Inteligência artificial operando 24/7, garantindo respostas rápidas e atendimento contínuo para seus clientes, sem interrupções.</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
@@ -109,7 +109,7 @@
                 <div class="advantage-card">
                     <div class="advantage-number">01</div>
                     <h3>Eficiência</h3>
-                    <p>Reduza custos operacionais em até 40% com automação de processos e fluxos de trabalho otimizados.</p>
+                    <p>Reduza custos operacionais com automação de processos e fluxos de trabalho otimizados.</p>
                 </div>
                 <div class="advantage-card">
                     <div class="advantage-number">02</div>
@@ -128,89 +128,116 @@
                 </div>
                 <div class="advantage-card">
                     <div class="advantage-number">05</div>
-                    <h3>Suporte 24/7</h3>
-                    <p>Atendimento com IA e suporte humano 24 horas por dia para garantir que seu negócio nunca pare.</p>
+                    <h3>Futuro</h3>
+                    <p>A inteligência artificial é o futuro: automação, inovação e crescimento ilimitado para empresas em qualquer setor.</p>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- Seção de Planos -->
-    <section id="pricing">
-        <div class="container">
-            <div class="section-header">
-                <h2>Escolha Seu Plano de IA</h2>
-                <p>Selecione o plano ideal para as necessidades do seu negócio. Todos incluem consulta via WhatsApp e assistência na configuração.</p>
+<section id="pricing">
+    <div class="container">
+        <div class="section-header">
+            <h2>Escolha Seu Plano de IA</h2>
+            <p>Selecione o plano ideal para as necessidades do seu negócio. Todos incluem consulta via WhatsApp e assistência na configuração.</p>
+        </div>
+        <div class="pricing-grid">
+            <div class="plan-card">
+                <div class="plan-header">
+                    <h3>Plano Start</h3>
+                    <div class="plan-price">
+                        <span class="currency">R$</span>
+                        <span class="amount">197,00</span>
+                        <span class="period">/mês</span>
+                    </div>
+                </div>
+                <ul class="plan-features">
+                    <li>Chatbot básico</li>
+                    <li>Fluxo simples ou Suporte</li>
+                    <li>1 usuário</li>
+                </ul>
+                <a href="https://wa.me/5511999999999?text=Tenho%20interesse%20no%20Plano%20Start%20(R$197/mês)%20e%20gostaria%20de%20mais%20detalhes" class="cta-btn secondary" target="_blank">
+                    Escolher Plano & Falar no WhatsApp
+                </a>
             </div>
-            <div class="pricing-grid">
-                <div class="plan-card">
-                    <div class="plan-header">
-                        <h3>Básico</h3>
-                        <div class="plan-price">
-                            <span class="currency">R$</span>
-                            <span class="amount">99</span>
-                            <span class="period">/mês</span>
-                        </div>
+            <div class="plan-card featured">
+                <div class="plan-badge">Mais Popular</div>
+                <div class="plan-header">
+                    <h3>Plano Medle</h3>
+                    <div class="plan-price">
+                        <span class="currency">R$</span>
+                        <span class="amount">490</span>
+                        <span class="period">/mês</span>
                     </div>
-                    <ul class="plan-features">
-                        <li>Consulta básica de IA</li>
-                        <li>Suporte por e-mail</li>
-                        <li>1 Integração</li>
-                        <li>Relatórios Mensais</li>
-                    </ul>
-                    <a href="https://wa.me/5511999999999?text=Tenho%20interesse%20no%20Plano%20Básico%20(R$99/mês)%20e%20gostaria%20de%20mais%20detalhes" class="cta-btn secondary" target="_blank">
-                        Escolher Plano & Falar no WhatsApp
-                    </a>
                 </div>
-                <div class="plan-card featured">
-                    <div class="plan-badge">Mais Popular</div>
-                    <div class="plan-header">
-                        <h3>Profissional</h3>
-                        <div class="plan-price">
-                            <span class="currency">R$</span>
-                            <span class="amount">299</span>
-                            <span class="period">/mês</span>
-                        </div>
+                <ul class="plan-features">
+                    <li>Agente de IA</li>
+                    <li>Relatórios fluídos</li>
+                    <li>5 usuários</li>
+                    <li>Automação de atendimento</li>
+                    <li>Automação de vendas</li>
+                </ul>
+                <a href="https://wa.me/5511999999999?text=Tenho%20interesse%20no%20Plano%20Medle%20(R$490/mês)%20e%20gostaria%20de%20mais%20detalhes" class="cta-btn secondary" target="_blank">
+                    Escolher Plano & Falar no WhatsApp
+                </a>
+            </div>
+            <div class="plan-card">
+                <div class="plan-header">
+                    <h3>Plano Full</h3>
+                    <div class="plan-price">
+                        <span class="currency">R$</span>
+                        <span class="amount">990</span>
+                        <span class="period">/mês</span>
                     </div>
-                    <ul class="plan-features">
-                        <li>Ferramentas avançadas de IA</li>
-                        <li>Suporte prioritário</li>
-                        <li>5 Integrações</li>
-                        <li>Análises em tempo real</li>
-                        <li>Fluxos de trabalho personalizados</li>
-                    </ul>
-                    <a href="https://wa.me/5511999999999?text=Tenho%20interesse%20no%20Plano%20Profissional%20(R$299/mês)%20e%20gostaria%20de%20mais%20detalhes" class="cta-btn primary" target="_blank">
-                        Escolher Plano & Falar no WhatsApp
-                    </a>
                 </div>
-                <div class="plan-card">
-                    <div class="plan-header">
-                        <h3>Empresarial</h3>
-                        <div class="plan-price">
-                            <span class="custom">Sob Consulta</span>
-                        </div>
+                <ul class="plan-features">
+                    <li>Agente para IA avançado</li>
+                    <li>Relatórios fluídos</li>
+                    <li>10 Usuários</li>
+                    <li>Automação de atendimento</li>
+                    <li>Automação de vendas</li>
+                    <li>Integrações ERP/CRM ou gateway de pagamentos</li>
+                    <li>Múltiplos canais</li>
+                </ul>
+                <a href="https://wa.me/5511999999999?text=Tenho%20interesse%20no%20Plano%20Full%20(R$990/mês)%20e%20gostaria%20de%20mais%20detalhes" class="cta-btn primary" target="_blank">
+                    Escolher Plano & Falar no WhatsApp
+                </a>
+            </div>
+            <div class="plan-card">
+                <div class="plan-header">
+                    <h3>Plano Full + Cobrança</h3>
+                    <div class="plan-price">
+                        <span class="currency">R$</span>
+                        <span class="amount">1200</span>
+                        <span class="period">/mês</span>
                     </div>
-                    <ul class="plan-features">
-                        <li>Soluções de IA personalizadas</li>
-                        <li>Equipe de suporte dedicada</li>
-                        <li>Integrações ilimitadas</li>
-                        <li>Segurança avançada</li>
-                        <li>Implementação local (on-premise)</li>
-                    </ul>
-                    <a href="https://wa.me/5511999999999?text=Tenho%20interesse%20no%20Plano%20Empresarial%20e%20gostaria%20de%20conversar%20sobre%20preços%20e%20soluções%20personalizadas" class="cta-btn secondary" target="_blank">
-                        Solicitar Orçamento Personalizado
-                    </a>
                 </div>
+                <ul class="plan-features">
+                    <li>Agente para IA avançado</li>
+                    <li>Relatórios fluídos</li>
+                    <li>10 Usuários</li>
+                    <li>Automação de atendimento</li>
+                    <li>Automação de vendas</li>
+                    <li>Integrações ERP/CRM ou gateway de pagamentos</li>
+                    <li>Múltiplos canais</li>
+                    <li>Sistema completo para Cobrança de Dívidas</li>
+                </ul>
+                <a href="https://wa.me/5511999999999?text=Tenho%20interesse%20no%20Plano%20Full%20+%20Cobrança%20(R$1200/mês)%20e%20gostaria%20de%20mais%20detalhes" class="cta-btn primary" target="_blank">
+                    Escolher Plano & Falar no WhatsApp
+                </a>
             </div>
         </div>
-    </section>
+    </div>
+</section>
+
 
     <!-- Seção CTA -->
     <section id="cta-section">
         <div class="container">
             <div class="cta-content">
                 <h2>Pronto para Transformar Seu Negócio?</h2>
-                <p>Junte-se a milhares de empresas que já utilizam nossas soluções de IA para impulsionar crescimento e inovação.</p>
+                <p>Junte-se a milhares de empresas que já utilizam soluções de IA para impulsionar crescimento e inovação.</p>
                 <a href="https://wa.me/5511999999999?text=Estou%20pronto%20para%20transformar%20meu%20negócio%20com%20soluções%20de%20IA.%20Vamos%20conversar%20sobre%20como%20começar" class="cta-btn primary large" target="_blank">
                     Fale com um Especialista Agora
                 </a>
@@ -229,9 +256,9 @@
                 <div class="footer-links">
                     <div class="footer-column">
                         <h4>Serviços</h4>
-                        <a href="#services">Automação de IA</a>
-                        <a href="#services">Análises</a>
-                        <a href="#services">Integração</a>
+                        <a href="#services">Automação Inteligente</a>
+                        <a href="#services">Trabalho 24/7</a>
+                        <a href="#services">Integração Perfeita</a>
                     </div>
                     <div class="footer-column">
                         <h4>Empresa</h4>
@@ -241,13 +268,13 @@
                     </div>
                     <div class="footer-column">
                         <h4>Contato</h4>
-                        <a href="mailto:contact@aiexpert.com">contact@aiexpert.com</a>
+                        <a href="mailto:contact@aiexpert.com">conversaai@gmail.com</a>
                         <a href="https://wa.me/5511999999999" target="_blank">WhatsApp</a>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 AI Expert. Todos os direitos reservados.</p>
+                <p>&copy; 2025 Conversa Ai. Todos os direitos reservados.</p>
             </div>
         </div>
     </footer>
