cores responsividade e logo

--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
 <body>
     <!-- Navegação -->
     <nav class="navbar">
-        <div class="container">
+    <div class="mobile-menu-toggle">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+
+        <div id="i" class="container">
             <div class="nav-brand">
-                <h2>AI Expert</h2>
+                <a href="#i"><img class="logo" src="/img/logo recortada.png" alt=""></a>
             </div>
             <div class="nav-links">
                 <a href="#services">Serviços</a>
@@ -31,7 +37,7 @@
             <div class="hero-content">
                 <h1>Construído para o Futuro das Soluções de IA</h1>
                 <p>Transforme o seu negócio com conversas inteligentes e humanizadas, convertendo mais vendas de uma maneira mais econômica.</p>
-                <a href="https://wa.me/5517991387471?text=Estou%20interessado%20nos%20seus%20serviços%20de%20IA%20e%20gostaria%20de%20conversar" class="cta-btn primary" target="_blank">
+                <a id="btn-init" href="https://wa.me/5517991387471?text=Estou%20interessado%20nos%20seus%20serviços%20de%20IA%20e%20gostaria%20de%20conversar" class="cta-btn primary" target="_blank">
                     Iniciar Conversa no WhatsApp
                 </a>
             </div>
@@ -148,7 +154,7 @@
                     <h3>Plano Start</h3>
                     <div class="plan-price">
                         <span class="currency">R$</span>
-                        <span class="amount">197,00</span>
+                        <span class="amount">197</span>
                         <span class="period">/mês</span>
                     </div>
                 </div>
@@ -250,8 +256,8 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-brand">
-                    <h3>AI Expert</h3>
-                    <p>Soluções inteligentes para o futuro dos negócios.</p>
+                    <img class="logo" src="/img/logo recortada.png" alt="">
+                    <p class="desc-logo">Soluções inteligentes para o futuro dos negócios.</p>
                 </div>
                 <div class="footer-links">
                     <div class="footer-column">
