--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <div class="plan-card featured">
                 <div class="plan-badge">Mais Popular</div>
                 <div class="plan-header">
-                    <h3>Plano Medle</h3>
+                    <h3>Plano Midlle</h3>
                     <div class="plan-price">
                         <span class="currency">R$</span>
                         <span class="amount">490</span>
