mudanca na secao de mostrar a plataforma

--- a/index.html
+++ b/index.html
@@ -84,25 +84,52 @@
             </div>
         </div>
     </section>
-    <section id="demo">
-    <div class="container">
-        <div class="section-header">
-            <h2>Veja o Software em Ação</h2>
-            <p>Assista a uma demonstração rápida e descubra como nossas soluções de IA podem transformar o seu negócio.</p>
-        </div>
-        <div class="demo-video-container">
-            <div class="video-wrapper">
-                <iframe 
-                    src="https://www.youtube.com/embed/VIDEO_ID_AQUI" 
-                    title="Demonstração do Software"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen>
-                </iframe>
-            </div>
-        </div>
+
+    <section id="real-system-modern">
+  <div class="container">
+    <div class="section-header">
+      <h2>Interface Real da Plataforma</h2>
+      <p>Confira como é a experiência visual real de uso do sistema ConversaAi.</p>
     </div>
+
+    <div class="modern-grid">
+      <div class="modern-card">
+        <img src="img/dashoboard.png" alt="Dashboard">
+        <div class="card-text">
+          <h3>📊 Painel de Indicadores</h3>
+          <p>Acompanhe atendimentos, equipe e desempenho em tempo real com KPIs claros.</p>
+        </div>
+      </div>
+
+      <div class="modern-card">
+        <img src="img/integracao.png" alt="Central de Atendimento">
+        <div class="card-text">
+          <h3>💬 Conversas com Controle</h3>
+          <p>Gerencie filas, aceite interações e visualize todas as mensagens com organização.</p>
+        </div>
+      </div>
+
+      <div class="modern-card">
+        <img src="img/calendario.png" alt="Agendamento Inteligente">
+        <div class="card-text">
+          <h3>📅 Calendário Integrado</h3>
+          <p>Envie mensagens com horário marcado, nome e motivo — sem esforço manual.</p>
+        </div>
+      </div>
+
+      <div class="modern-card">
+        <img src="img/campanha.png" alt="Campanhas">
+        <div class="card-text">
+          <h3>📣 Campanhas com Segurança</h3>
+          <p>Evite bloqueios e mantenha entregabilidade com intervalos controlados.</p>
+        </div>
+      </div>
+    </div>
+    </div>
+  </div>
 </section>
+
+
 
     <!-- Seção de Vantagens -->
     <section id="advantages">
