agentes mudanca simples

--- a/index.html
+++ b/index.html
@@ -167,6 +167,36 @@
             </div>
         </div>
     </section>
+    <section id="agents">
+  <div class="container">
+    <div class="section-header">
+      <h2>Nossos Agentes de IA</h2>
+      <p>Conheça os agentes inteligentes prontos para automatizar cada área do seu negócio.</p>
+    </div>
+    <div class="agents-grid">
+      <div class="agent-card">
+        <div class="agent-icon">💰</div>
+        <h3>Agente de Cobrança</h3>
+        <p>Negocia dívidas, envia links de pagamento e acompanha inadimplentes automaticamente.</p>
+      </div>
+      <div class="agent-card">
+        <div class="agent-icon">💬</div>
+        <h3>Agente de Atendimento</h3>
+        <p>Recebe o cliente com linguagem humanizada, coleta dados e direciona conforme o perfil.</p>
+      </div>
+      <div class="agent-card">
+        <div class="agent-icon">📈</div>
+        <h3>Agente de Vendas</h3>
+        <p>Qualifica leads, responde dúvidas e conduz até a conversão com gatilhos de urgência.</p>
+      </div>
+      <div class="agent-card">
+        <div class="agent-icon">🛠️</div>
+        <h3>Agente de Suporte</h3>
+        <p>Resolve dúvidas frequentes, cria chamados e acompanha solicitações sem perder o histórico.</p>
+      </div>
+    </div>
+  </div>
+</section>
 
     <!-- Seção de Planos -->
 <section id="pricing">
