mudanca na cor e animacao

--- a/index.html
+++ b/index.html
@@ -167,32 +167,33 @@
             </div>
         </div>
     </section>
-    <section id="agents">
+    <section id="agents-ai">
+  <div class="agents-bg-glow"></div>
   <div class="container">
-    <div class="section-header">
-      <h2>Nossos Agentes de IA</h2>
-      <p>Conheça os agentes inteligentes prontos para automatizar cada área do seu negócio.</p>
+    <div class="section-header bright">
+      <h2>Conheça Nossos Agentes Inteligentes</h2>
+      <p>Automatize com precisão e personalidade. Cada agente foi treinado para uma missão estratégica.</p>
     </div>
-    <div class="agents-grid">
-      <div class="agent-card">
-        <div class="agent-icon">💰</div>
-        <h3>Agente de Cobrança</h3>
-        <p>Negocia dívidas, envia links de pagamento e acompanha inadimplentes automaticamente.</p>
+    <div class="agents-3d-grid">
+      <div class="agent-3d-card">
+        <div class="agent-icon-glow">💰</div>
+        <h3>Cobrança</h3>
+        <p>Recupera inadimplentes, envia links e negocia direto pelo WhatsApp com linguagem humanizada.</p>
       </div>
-      <div class="agent-card">
-        <div class="agent-icon">💬</div>
-        <h3>Agente de Atendimento</h3>
-        <p>Recebe o cliente com linguagem humanizada, coleta dados e direciona conforme o perfil.</p>
+      <div class="agent-3d-card">
+        <div class="agent-icon-glow">💬</div>
+        <h3>Atendimento</h3>
+        <p>Faz o primeiro contato, filtra a intenção do cliente e direciona com inteligência.</p>
       </div>
-      <div class="agent-card">
-        <div class="agent-icon">📈</div>
-        <h3>Agente de Vendas</h3>
-        <p>Qualifica leads, responde dúvidas e conduz até a conversão com gatilhos de urgência.</p>
+      <div class="agent-3d-card">
+        <div class="agent-icon-glow">📈</div>
+        <h3>Vendas</h3>
+        <p>Aborda leads, apresenta benefícios, coleta dados e empurra para conversão com urgência.</p>
       </div>
-      <div class="agent-card">
-        <div class="agent-icon">🛠️</div>
-        <h3>Agente de Suporte</h3>
-        <p>Resolve dúvidas frequentes, cria chamados e acompanha solicitações sem perder o histórico.</p>
+      <div class="agent-3d-card">
+        <div class="agent-icon-glow">🛠️</div>
+        <h3>Suporte</h3>
+        <p>Responde dúvidas frequentes, gera tickets e mantém histórico sem intervenção humana.</p>
       </div>
     </div>
   </div>
