mudanca nos agentes

--- a/index.html
+++ b/index.html
@@ -167,33 +167,47 @@
             </div>
         </div>
     </section>
-    <section id="agents-ai">
-  <div class="agents-bg-glow"></div>
+    <section id="agents-modern">
   <div class="container">
-    <div class="section-header bright">
-      <h2>Conheça Nossos Agentes Inteligentes</h2>
-      <p>Automatize com precisão e personalidade. Cada agente foi treinado para uma missão estratégica.</p>
-    </div>
-    <div class="agents-3d-grid">
-      <div class="agent-3d-card">
-        <div class="agent-icon-glow">💰</div>
-        <h3>Cobrança</h3>
-        <p>Recupera inadimplentes, envia links e negocia direto pelo WhatsApp com linguagem humanizada.</p>
+    <div class="agents-wrapper">
+      <div class="agents-row">
+        <div class="agent-text">
+          <h3>💰 Agente de Cobrança</h3>
+          <p>Envia lembretes automáticos, links de pagamento e negocia de forma humanizada.</p>
+        </div>
+        <div class="agent-image">
+          <img class="imagem imagem_cobranca" src="img/ChatGPT Image Jul 30, 2025, 03_52_24 PM.png" alt="Agente de Cobrança">
+        </div>
       </div>
-      <div class="agent-3d-card">
-        <div class="agent-icon-glow">💬</div>
-        <h3>Atendimento</h3>
-        <p>Faz o primeiro contato, filtra a intenção do cliente e direciona com inteligência.</p>
+
+      <div class="agents-row reverse">
+        <div class="agent-image">
+          <img class="imagem imagem_atendimento" src="img/f8598986-2d2e-4981-9da8-8f72156f2566.png" alt="Agente de Atendimento">
+        </div>
+        <div class="agent-text">
+          <h3>💬 Agente de Atendimento</h3>
+          <p>Coleta informações, identifica intenções e direciona de forma inteligente.</p>
+        </div>
       </div>
-      <div class="agent-3d-card">
-        <div class="agent-icon-glow">📈</div>
-        <h3>Vendas</h3>
-        <p>Aborda leads, apresenta benefícios, coleta dados e empurra para conversão com urgência.</p>
+
+      <div class="agents-row">
+        <div class="agent-text">
+          <h3>📈 Agente de Vendas</h3>
+          <p>Conduz o cliente até a conversão com mensagens estratégicas e personalizadas.</p>
+        </div>
+        <div class="agent-image">
+          <img class="imagem imagem_vendas" src="img/687c52fd-f2d2-47b0-9650-9c08c038c33c.png" alt="Agente de Vendas">
+        </div>
       </div>
-      <div class="agent-3d-card">
-        <div class="agent-icon-glow">🛠️</div>
-        <h3>Suporte</h3>
-        <p>Responde dúvidas frequentes, gera tickets e mantém histórico sem intervenção humana.</p>
+
+      <div class="agents-row reverse">
+        <div class="agent-image">
+          <img class="imagem imagem_suporte" src="img/c4483f08-7c03-40d6-9c5d-264522fcaafb.png" alt="Agente de Suporte">
+        </div>
+        <div class="agent-text">
+          <h3>🛠️ Agente de Suporte</h3>
+          <p>Resolve dúvidas, gera tickets e mantém o acompanhamento sem necessidade humana.</p>
+        </div>
       </div>
     </div>
   </div>
