mudanca nos planos

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <section id="real-system-modern">
   <div class="container">
     <div class="section-header">
-      <h2>Interface Real da Plataforma</h2>
+      <h2>Conheça nossa plataforma</h2>
       <p>Confira como é a experiência visual real de uso do sistema ConversaAi.</p>
     </div>
 
@@ -213,101 +213,102 @@
   </div>
 </section>
 
-    <!-- Seção de Planos -->
-<section id="pricing">
-    <div class="container">
-        <div class="section-header">
-            <h2>Escolha Seu Plano de IA</h2>
-            <p>Selecione o plano ideal para as necessidades do seu negócio. Todos incluem consulta via WhatsApp e assistência na configuração.</p>
-        </div>
-        <div class="pricing-grid">
-            <div class="plan-card">
-                <div class="plan-header">
-                    <h3>Plano Start</h3>
-                    <div class="plan-price">
-                        <span class="currency">R$</span>
-                        <span class="amount">197</span>
-                        <span class="period">/mês</span>
-                    </div>
-                </div>
-                <ul class="plan-features">
-                    <li>Chatbot básico</li>
-                    <li>Fluxo simples ou Suporte</li>
-                    <li>1 usuário</li>
-                </ul>
-                <a href="https://wa.me/5511999999999?text=Tenho%20interesse%20no%20Plano%20Start%20(R$197/mês)%20e%20gostaria%20de%20mais%20detalhes" class="cta-btn secondary" target="_blank">
-                    Escolher Plano & Falar no WhatsApp
-                </a>
-            </div>
-            <div class="plan-card featured">
-                <div class="plan-badge">Mais Popular</div>
-                <div class="plan-header">
-                    <h3>Plano Midlle</h3>
-                    <div class="plan-price">
-                        <span class="currency">R$</span>
-                        <span class="amount">490</span>
-                        <span class="period">/mês</span>
-                    </div>
-                </div>
-                <ul class="plan-features">
-                    <li>Agente de IA</li>
-                    <li>Relatórios fluídos</li>
-                    <li>5 usuários</li>
-                    <li>Automação de atendimento</li>
-                    <li>Automação de vendas</li>
-                </ul>
-                <a href="https://wa.me/5511999999999?text=Tenho%20interesse%20no%20Plano%20Medle%20(R$490/mês)%20e%20gostaria%20de%20mais%20detalhes" class="cta-btn secondary" target="_blank">
-                    Escolher Plano & Falar no WhatsApp
-                </a>
-            </div>
-            <div class="plan-card">
-                <div class="plan-header">
-                    <h3>Plano Full</h3>
-                    <div class="plan-price">
-                        <span class="currency">R$</span>
-                        <span class="amount">990</span>
-                        <span class="period">/mês</span>
-                    </div>
-                </div>
-                <ul class="plan-features">
-                    <li>Agente para IA avançado</li>
-                    <li>Relatórios fluídos</li>
-                    <li>10 Usuários</li>
-                    <li>Automação de atendimento</li>
-                    <li>Automação de vendas</li>
-                    <li>Integrações ERP/CRM ou gateway de pagamentos</li>
-                    <li>Múltiplos canais</li>
-                </ul>
-                <a href="https://wa.me/5511999999999?text=Tenho%20interesse%20no%20Plano%20Full%20(R$990/mês)%20e%20gostaria%20de%20mais%20detalhes" class="cta-btn primary" target="_blank">
-                    Escolher Plano & Falar no WhatsApp
-                </a>
-            </div>
-            <div class="plan-card">
-                <div class="plan-header">
-                    <h3>Plano Full + Cobrança</h3>
-                    <div class="plan-price">
-                        <span class="currency">R$</span>
-                        <span class="amount">1200</span>
-                        <span class="period">/mês</span>
-                    </div>
-                </div>
-                <ul class="plan-features">
-                    <li>Agente para IA avançado</li>
-                    <li>Relatórios fluídos</li>
-                    <li>10 Usuários</li>
-                    <li>Automação de atendimento</li>
-                    <li>Automação de vendas</li>
-                    <li>Integrações ERP/CRM ou gateway de pagamentos</li>
-                    <li>Múltiplos canais</li>
-                    <li>Sistema completo para Cobrança de Dívidas</li>
-                </ul>
-                <a href="https://wa.me/5511999999999?text=Tenho%20interesse%20no%20Plano%20Full%20+%20Cobrança%20(R$1200/mês)%20e%20gostaria%20de%20mais%20detalhes" class="cta-btn primary" target="_blank">
-                    Escolher Plano & Falar no WhatsApp
-                </a>
-            </div>
-        </div>
+ <section id="pricing">
+  <div class="container">
+    <div class="section-header">
+      <h2>Escolha Seu Plano de IA</h2>
+      <p>Selecione o plano ideal para as necessidades do seu negócio. Todos incluem consulta via WhatsApp e assistência na configuração.</p>
     </div>
+
+    <div class="pricing-grid">
+      <!-- PLANO START -->
+      <div class="plan-card">
+        <div class="plan-header">
+          <h3>Plano Start</h3>
+          <div class="plan-price">
+            <span class="currency">R$</span>
+            <span class="amount">197</span>
+            <span class="period">/mês</span>
+          </div>
+        </div>
+        <ul class="plan-features">
+          <li>Chatbot básico</li>
+          <li>Fluxo simples ou Suporte</li>
+          <li>1 usuário</li>
+        </ul>
+        <a href="https://wa.me/5511999999999?text=Tenho%20interesse%20no%20Plano%20Start" class="cta-btn secondary" target="_blank">
+          Escolher Plano & Falar no WhatsApp
+        </a>
+      </div>
+
+      <!-- PLANO MIDLLE -->
+      <div class="plan-card featured">
+        <div class="plan-badge">Mais Popular</div>
+        <div class="plan-header">
+          <h3>Plano Midlle</h3>
+          <div class="plan-price">
+            <span class="currency">R$</span>
+            <span class="amount">490</span>
+            <span class="period">/mês</span>
+          </div>
+        </div>
+        <ul class="plan-features">
+          <li class="inherits"> Tudo do Plano Start<span class="plus">＋</span></li>
+          <li>Agente de IA</li>
+          <li>Relatórios fluídos</li>
+          <li>5 usuários</li>
+          <li>Automação de atendimento</li>
+          <li>Automação de vendas</li>
+        </ul>
+        <a href="https://wa.me/5511999999999?text=Tenho%20interesse%20no%20Plano%20Midlle" class="cta-btn secondary" target="_blank">
+          Escolher Plano & Falar no WhatsApp
+        </a>
+      </div>
+
+      <!-- PLANO FULL -->
+      <div class="plan-card">
+        <div class="plan-header">
+          <h3>Plano Full</h3>
+          <div class="plan-price">
+            <span class="currency">R$</span>
+            <span class="amount">990</span>
+            <span class="period">/mês</span>
+          </div>
+        </div>
+        <ul class="plan-features">
+          <li class="inherits"> Tudo do Plano Midlle<span class="plus">＋</span></li>
+          <li>Agente para IA avançado</li>
+          <li>10 usuários</li>
+          <li>Integrações ERP/CRM ou <h4 class="destaque">GATEWAY</h4> de pagamentos</li>
+          <li>Múltiplos canais</li>
+        </ul>
+        <a href="https://wa.me/5511999999999?text=Tenho%20interesse%20no%20Plano%20Full" class="cta-btn primary" target="_blank">
+          Escolher Plano & Falar no WhatsApp
+        </a>
+      </div>
+
+      <!-- PLANO FULL + COBRANÇA -->
+      <div class="plan-card">
+        <div class="plan-header">
+          <h3>Plano Full + Cobrança</h3>
+          <div class="plan-price">
+            <span class="currency">R$</span>
+            <span class="amount">1200</span>
+            <span class="period">/mês</span>
+          </div>
+        </div>
+        <ul class="plan-features">
+          <li class="inherits"> Tudo do Plano Full<span class="plus">＋</span></li>
+          <li>Sistema completo para Cobrança de Dívidas</li>
+        </ul>
+        <a href="https://wa.me/5511999999999?text=Tenho%20interesse%20no%20Plano%20Full%20+%20Cobrança" class="cta-btn primary" target="_blank">
+          Escolher Plano & Falar no WhatsApp
+        </a>
+      </div>
+    </div>
+  </div>
 </section>
+
 
 
     <!-- Seção CTA -->
